Update portfolio informations

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
       content="developer portfolio"
     />
     <meta name="keyword" content="portfolio, javascript, developer, frontend, react, dev, front-end, tech, programmer">
-    <title>Developer Portfolio</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <title>Junior Wagoussi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
